--- a/style.css
+++ b/style.css
@@ -132,13 +132,15 @@
        margin: 0;
 }
    #headtexts{
-       font-size: 25px;
-       color: yellow;      
+       font-size: 25px;   
         /* -moz-transform: translateX(100%);
         -webkit-transform: translateX(100%);
         transform: translateX(100%); */
-        animation: my-animation 7s  linear infinite;
+        animation: my-animation 10s  linear infinite;
       }
+  .moving{
+    color: white;   
+  }
       
       
       @keyframes my-animation {
@@ -203,7 +205,7 @@
 }
 #scroll-container{
   width: 100%;
-    background-color: red;
+    background-color: blueviolet;
     margin-top: 12vh;
 }
 .flip-card {
@@ -375,11 +377,56 @@ padding: 10px;
 
 
 
+.rated_company{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  width: 100%;
+  /* height: 100vh; */
+  grid-gap: 1vw;
+  margin-left: 1vw;
+}
+.rated_company{
+  width: 17vw;
+  height: 20vh;
+}
+.star{
+  height: 7vh;
+  width: 17vw;
+  margin-left: 1vw;
+}
 
 
+.rotate_grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 60%;
+  margin-left: 25vw;
+  grid-gap: 1vw;
+}
+.rotate{
+  background-color: black;
+  width: 6vw;
+  height: 10vh;
+  border-radius: 50%;
+  animation-name: spin;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+  
+}
+.rotate:hover{
+  background-color: darkcyan;
+}
+.top{
+  color: white;
+  padding-top: 2.5vh;
+}
 
-
-
+@keyframes spin {
+  from{transform: rotateZ(0deg);}
+  to{transform: rotateZ(360deg);}
+}
 
 
 
@@ -398,7 +445,7 @@ padding: 10px;
 
 
 .footer_section{
-  /* margin-top: 170vh; */
+  margin-top: 10vh;
   background-color: rgb(153, 152, 151);
   padding-top: 5vh;
   padding-bottom: 2vh;
@@ -416,4 +463,5 @@ padding: 10px;
   padding: 2vh 0;
   background: white;
 }
+
 
