--- a/about.css
+++ b/about.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background-color: white;
+    background-color: rgb(142, 21, 255);
     color: black;
     position: fixed;
     top: 0;
@@ -158,7 +158,7 @@
     
 }
 .hero_image{
-  background-image: url(/Images/project_hero.jpg);
+  background-image: url(images/Refuse-Management-and-Sanitation-Board.webp);
   background-size: cover;
   background-repeat: no-repeat;
   height: 50vh;
@@ -245,38 +245,76 @@
   color: black;
   align-self:flex-end;
 }
-#blouse{
-  color: yellow;
-  justify-self: baseline;
-  
-  /* justify-self: right; */
+
+
+
+
+
+
+.top_rated{
+  font-size: 7vh;
+  margin-bottom: 3vh;
 }
-img{
-  width: 100%;
+.company_grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 2vw;
+  width: 85vw;
+  margin-left: 9vw;
+}
+.card{
+  border: 1px solid black;
   height: 100%;
-  display: block;
 }
-.wrapper{
-  /* margin: 20px; */
-  width: 100%;
+.card_img{
+  width: 25vw;
 }
-.wrapper .cards_wrap{
-  display: flex;
-  flex-wrap: wrap;
+.card_text{
+  padding: 1vw;
 }
-.cards_wrap .card_item{
-width: 25%;
-padding: 10px;
+.order{
+  padding: 1vh;
+  height: 5vh;
+  background-color: blueviolet;
+  border: 0;
+  border-radius: 0.3vw;
+  margin-top: 2vh;
+  margin-bottom: 1vh;
+  color: white;
+  font-weight: bolder;
 }
-.cards_wrap .card_inner{
-  background: #fff;
+
+
+
+
+
+
+
+
+.patnership1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1vw;
+  width: 80%;
+  margin-left: 7vw;
 }
-.cards_wrap .card_top{
-  width: 100%;
-  height: auto;
-  padding: 10px;
-  padding-bottom: 0;
+.partnership_header{
+  font-size: 7vh;
+  margin-bottom: 2vh;
+  text-align: center;
 }
+.patnership_image{
+  width: 40vw;
+  height: 60vh;
+}
+
+
+
+
+
+
+
+
 
 .footer_section{
   margin-top: 170vh;
