--- a/about.css
+++ b/about.css
@@ -6,6 +6,7 @@
    body {
     font-family: cursive;
     margin-top: 15vh;
+    /* overflow-x: hidden; */
    }
    html{
      overflow-x: hidden;
@@ -427,32 +428,57 @@
     /* overflow-x: hidden; */
   }
   .navbar{
-    width: 80vw;
+    width: 100vw;
+  }
+  .menu{
+    background-color: white;
+    color: white;
   }
   .hero_image{
-    width: 80%;
+    width: 100%;
+  }
+  .main_about{
+    grid-template-columns: 1fr;
+  }
+  .about_img{
+    width: 80vw;
+    margin-left: 5vw;
   }
   .consultants{
     grid-template-columns: 1fr 1fr;
-    grid-gap: 0;
+    grid-gap: 2vw;
     margin-left: 2vw;
-    width: 80vw;
+    width: 90vw;
+  }
+  .consultant_img{
+    width: 40vw;
   }
   .company_grid{
     grid-template-columns: 1fr 1fr;
-    margin-left: 2vw;
+    margin-left: 7vw;
   }
   .no_card{
     display: none;
   }
+  .partnership1{
+    margin-left: 5vw;
+  }
   .patnership_image{
-    width: 40vw;
+    width: 45vw;
   }
   .registeration_form_img{
-    width: 30vw;
+    width: 45vw;
   }
   .report_problem{
-    width: 70%;
+    width: 100%;
+    height: 33vh;
     /* padding-bottom: 7vh; */
   }
+  .no_list{
+    /* display: none; */
+  }
+  .footer_section{
+    width: 100vw;
+  }
+  
 }
