--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     /* box-sizing: border-box; */
+    /* box-sizing: border-box; */
    }
    body {
     font-family: cursive;
@@ -560,4 +561,7 @@ padding: 10px;
     grid-template-columns: 1fr;
     width: 100%;
   } 
+  .excellent{
+    display: none;
+  }
 } 
