--- a/contact.css
+++ b/contact.css
@@ -8,16 +8,130 @@ body{
     scrollbar-width: thin;
     scrollbar-color: #6969dd #e0e0e0;
 }
-.navbar-brand{
-    font-size: 7vh;
-    padding-left: 3vw;
-    padding-top: vh;
-    padding-bottom: 2vh;
-    z-index: 2;
-    margin-right: 2vw;
-    font-weight: bolder;
-    color: #0353e7;
+a {
+    text-decoration: none;
+   }
+   li {
+    list-style: none;
+   }
+   .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: rgb(142, 21, 255);
+    color: black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    height: 12vh;
+    /* position: relative; */
+   }
+   .nav-links a {
+    color: black;
+   }
+   .logo {
+    font-size: 32px;
+   }
+   .menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+   }
+
+   .menu li:hover {
+    background-color: #4c9e9e;
+    border-radius: 5px;
+    transition: 0.3s ease;
+   }
+
+   .menu li {
+    padding: 5px 14px;
+   }
+   
+   .services {
+    position: relative; 
+   }
+
+   .dropdown {
+    background-color: rgb(1, 139, 139);
+    padding: 1em 0;
+    position:fixed; /*WITH RESPECT TO PARENT*/
+    display: none;
+    border-radius: 8px;
+    top: 35px;
+   }
+   .dropdown li + li {
+    margin-top: 10px;
+   }
+   .dropdown li {
+    padding: 0.5em 1em;
+    width: 8em;
+    text-align: center;
+   }
+   .dropdown li:hover {
+    background-color: white;
+   }
+   .services:hover .dropdown {
+    display: block;
+   }
+   /* input[type=checkbox]{
+    display: none;
+   }
+   input[type=checkbox]{
+    display: none;
+   }  */
+   #checkbox_toggle{
+    display: none;
 }
+.hamburger {
+ display: none;
+ font-size: 24px;
+ user-select: none;
+}
+
+@media (max-width: 768px) {
+.menu { 
+ display:none;
+ position: absolute;
+ background-color:black;
+ right: 0;
+ left: 0;
+ text-align: center;
+ padding: 16px 0;
+}
+.menu  li:hover {
+ display: inline-block;
+ background-color:black;
+ transition: 0.3s ease;
+}
+.menu li + li {
+ margin-top: 12px;
+}
+input[type=checkbox]:checked ~ .menu{
+ display: block;
+}
+.hamburger {
+ display: block;
+}
+.dropdown {
+ left: 50%;
+ top: 30px;
+ transform: translateX(35%);
+}
+.dropdown li:hover {
+ background-color: black;
+}
+}
+.hero_image{
+ background-image: url(Images/project_hero.jpg);
+ background-size: cover;
+ background-repeat: no-repeat;
+ height: 70vh;
+ max-width: 100%;
+}
+
 .signup_btn{
     color: white;
     border: 0;
@@ -72,8 +186,7 @@ body{
 }
 .container{
     margin-left: 18vw;
-    position: absolute;
-    top: 19vh;
+    margin-top: 7vh;
     background-color: white;
     padding: 3vh;
     width: 63vw;
@@ -219,3 +332,31 @@ body{
 
 
 
+
+
+
+
+
+
+
+.footer_section{
+    margin-top: 10vh;
+    background-color: rgb(153, 152, 151);
+    padding-top: 5vh;
+    padding-bottom: vh;
+  }
+  .footer_lists{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 80vw;
+    margin-left: 10vw;
+  }
+  .copyright{
+    text-align: center;
+    margin-top: 4vh;
+    margin-bottom: 1vh;
+    padding: 2vh 0;
+    background: white;
+  }
+  
+  
