--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
    }
    body {
     font-family: cursive;
-    margin-top: 30vh;
+    /* margin-top: 20vh; */
     background-color: white;
     text-align: left;
-    margin-top: 100vh;
+    /* margin-top: 100vh; */
    }
    html{
      overflow-x: hidden;
@@ -166,10 +166,10 @@
     
 }
 .hero_image{
-  background-image: url(Images/project_hero.jpg);
+  background-image: url(Images/h1_hero2.png);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 50vh;
+  height: 70vh;
   max-width: 100%;
 }
 
@@ -210,7 +210,7 @@
 #scroll-container{
   width: 100%;
     background-color: blueviolet;
-    margin-top: 12vh;
+    margin-top: 11.5vh;
 }
 .flip-card {
   height: 100%;
@@ -335,6 +335,44 @@ padding: 10px;
 }
 
 
+
+.philosophy{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1vw;
+  margin-top: 3vh;
+  margin-bottom: 3vh;
+}
+.philosophy p{
+  font-size: 3vh;
+  margin-top: 5vh;
+}
+.philosophy img{
+  height: 70vh;
+}
+.philosophy small{
+  font-size: 2vh;
+}
+.philosophy h1{
+  font-size: 5vh;
+}
+.boss{
+  margin-top: 4vh;
+}
+/* .area1{
+  grid-area: area1;
+}
+.area1{
+  grid-area: area2;
+} */
+@media (max-width: 700px) {
+  .philosophy{
+    grid-template-columns: 1fr;
+  }
+  .special_philosophy{
+    display: none;
+  }
+}
 
 
 
@@ -490,7 +528,7 @@ padding: 10px;
   margin-top: 10vh;
   background-color: rgb(153, 152, 151);
   padding-top: 5vh;
-  padding-bottom: vh;
+  padding-bottom: 4vh;
 }
 .footer_lists{
   display: grid;
